[package]
name = "headless-lms-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To add a new dependency, search for it using `cargo search` and take the latest version of the package
# and the comment from there.
[dependencies]
headless-lms-certificates = { path = "../certificates" }
headless-lms-models = { path = "../models" }
headless-lms-utils = { path = "../utils" }
mooc-langs-api = { path = "../langs-api" }
doc-macro = { path = "../doc-macro" }

# Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust
actix-web = "4.3.1"
# Static file serving for Actix Web
actix-files = "0.6.5"
# Multipart form support for Actix web.
actix-multipart = "0.6.1"
# Strongly Typed Mimes
mime = "0.3.17"
# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio = { version = "1.36.0", features = ["fs", "io-util"] }
# Utilities to work with `Stream` and `tokio`.
tokio-stream = "0.1.14"
# An implementation of futures and streams featuring zero allocations, composability, and itera…
futures = "0.3.30"
# Common utilities and extension traits for the futures-rs library.
futures-util = "0.3.30"
# A `dotenv` implementation for Rust
dotenv = "0.15.0"
# A simple library to work with listenfds passed from the outside (systemd/catflap socket activation)
listenfd = "1.0.1"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.80"
# 🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "chrono",
  "json",
] }
# A library to generate and parse UUIDs.
uuid = { version = "1.7.0", features = ["serde", "v4", "v5"] }
# A generic serialization/deserialization framework
serde = { version = "1.0.197", features = ["derive"] }
# Date and time library for Rust
chrono = { version = "0.4.34", features = ["serde"] }
# A JSON serialization file format
serde_json = "1.0.114"
# Adds #[derive(x)] macros for more traits
derive_more = "0.99.17"
# Types and traits for working with bytes
bytes = "1.5.0"
# Extra iterator adaptors, iterator methods, free functions, and macros.
itertools = "0.12.1"
# the BLAKE3 hash function
blake3 = "1.5.0"
# Recursively walk a directory.
walkdir = "2.5.0"
# higher level HTTP client library
reqwest = { version = "0.11.24", features = ["brotli", "gzip", "json"] }
# Sessions for Actix web
actix-session = { version = "0.7.2", features = ["cookie-session"] }
# An extensible, strongly-typed implementation of OAuth2
oauth2 = "4.4.2"
# URL library for Rust, based on the WHATWG URL Standard
url = "2.5.0"
# Application-level tracing for Rust.
tracing = "0.1.40"
# Utilities for implementing and composing `tracing` subscribers.
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Utilities for enriching errors with `tracing`.
tracing-error = "0.2.0"
#  A library to acquire a stack trace (backtrace) at runtime in a Rust program. Should be removed after Rust 1.65.
backtrace = "0.3.69"
# Provides compatibility between `tracing` and the `log` crate.
tracing-log = "0.2.0"
# This library provides a convenient derive macro for the standard library's std::error::Error trait.
thiserror = "1.0.57"
# generate typescript bindings from rust types
ts-rs = { git = "https://github.com/Heliozoa/ts-rs", rev = "94bf3c040ece6627b69f0d7095c0a5e2984adc86", features = [
  "chrono-impl",
  "serde-compat",
  "serde-json-impl",
  "uuid-impl",
], optional = true }
# restricting the transitive dependencies of actix-web during beta.
# HTTP primitives for the Actix ecosystem .
actix-http = "3.3.1"
# Fast CSV parsing with support for serde.
csv = "1.3.0"
# Email client
lettre = "0.11.1"
# An implementation of regular expressions for Rust.
regex = "1.10.3"
# Single assignment cells and lazy values.
once_cell = "1.19.0"
# Rate limiting middleware for actix-web
actix-extensible-rate-limit = "0.3.1"
# Detect if a user-agent is a known bot
isbot = "0.1.3"
# user-agent strings parser
woothee = "0.13.0"
# Bindings to libgit2 for interoperating with git repositories.
git2 = "0.18.2"
# A library for managing temporary files and directories.
tempfile = "3.10.1"
#  Binding for the zstd compression library.
zstd = "0.13.0" # matches the version from actix-http
# A Rust implementation of a TAR file reader and writer.
tar = "0.4.40"
# Utilities for random number generation
rand = "0.8.5"
# JSON Web Token (JWT) is a compact, URL-safe means of representing claims to be transferred between two parties.
jwt = "0.16.0"
# Pure Rust implementation of the Hash-based Message Authentication Code (HMAC).
hmac = "0.12.1"
# Pure Rust implementation of the SHA-2 hash function family.
sha2 = "0.10.8"
# Websocket support for actix-web
actix-web-actors = "4.3.0"
# Actors for actix-web-actors
actix = "0.13.0"
# Type erasure for async trait methods
async-trait = "0.1.77"
# Utilities for working with Tokio.
tokio-util = "0.7.10"
# Asynchronous streams using async & await notation
async-stream = "0.3.5"

[dev-dependencies]
# Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs.
pretty_assertions = "1.4.0"
# HTTP mocking for Rust.
mockito = "1.1.1"
# Random number generators and other randomness functionality.
rand = "0.8.5"

[features]
ts_rs = ["ts-rs", "headless-lms-models/ts_rs", "headless-lms-utils/ts_rs"]
