[package]
name = "headless-lms-utils"
version = "0.1.0"
authors = ["Henrik Nygren <nygrenh@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"  # minimum required Rust version, update if you use a new API

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To add a new dependency, search for it using `cargo search` and take the latest version of the package
# and the comment from there.
[dependencies]
# Multipart form support for Actix web.
actix-multipart = "0.4.0"
# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio = { version = "1.19.2", features = ["fs", "io-util"] }
# Additional utilities for working with Tokio.
tokio-util = { version = "0.7.3", features = ["io"] }
# Utilities to work with `Stream` and `tokio`.
tokio-stream = "0.1.9"
# An implementation of future and streams featuring zero allocations, composability, and itera…
futures = "0.3.21"
# A library to generate and parse UUIDs.
uuid = { version = "0.8.2", features = ["serde", "v4", "v5"] }
# A generic serialization/deserialization framework
serde = { version = "1.0.137", features = ["derive"] }
# Date and time library for Rust
chrono = { version = "0.4.19", features = ["serde"] }
# A JSON serialization file format
serde_json = "1.0.81"
# A crate for uploading files to Google cloud storage, and for generating download urls.
# Using a fork until this gets merged: https://github.com/ThouCheese/cloud-storage-rs/pull/101
cloud-storage = { version = "0.11.1", default_features = false, features = ["rustls-tls"] }
# A library for managing a temporary directory and deleting all contents when it's dropped.
tempdir = "0.3.7"
# Type erasure for async trait methods
async-trait = "0.1.56"
# Types and traits for working with bytes
bytes = "1.1.0"
# Random number generators and other randomness functionality.
rand = "0.8.5"
# the BLAKE3 hash function
blake3 = "1.3.1"
# Recursively walk a directory.
walkdir = "2.3.2"
# URL library for Rust, based on the WHATWG URL Standard
url = "2.2.2"
# Application-level tracing for Rust.
tracing = "0.1.34"
# generate typescript bindings from rust types
ts-rs = { git = "https://github.com/Heliozoa/ts-rs", rev = "71bba3a18cdc5bc02c63b2772fd5324b1b07227b", features = [
  "chrono-impl",
  "serde-compat",
  "serde-json-impl",
  "uuid-impl",
], optional = true }
# An implementation of regular expressions for Rust.
regex = "1.5.6"
# Single assignment cells and lazy values.
once_cell = "1.12.0"
# An LCS based slice and string diffing implementation.
diff = "0.1.12"
# This library provides a convenient derive macro for the standard library's std::error::Error trait.
thiserror = "1.0.31"
# Percent encoding and decoding
percent-encoding = "2.1.0"
# Provides types and useful methods for working with IPv4 and IPv6 network addresses.
ipnet = "2.5.0"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.57"
# DEFLATE compression and decompression exposed as Read/BufRead/Write streams.
flate2 = "1.0.24"


# Workaround for this issue: https://github.com/tkaitchuck/aHash/issues/95. Once the issue has been resolved, this dependency can be removed.
indexmap = "1.8.2"

[dev-dependencies]
# Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs.
pretty_assertions = "1.2.1"

[features]
ts_rs = ["ts-rs"]
