[package]
name = "headless-lms-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To add a new dependency, search for it using `cargo search` and take the latest version of the package
# and the comment from there.
[dependencies]
# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio.workspace = true
# Additional utilities for working with Tokio.
tokio-util = { version = "0.7.10", features = ["io"] }
# Utilities to work with `Stream` and `tokio`.
tokio-stream = "0.1.14"
# An implementation of future and streams featuring zero allocations, composability, and itera…
futures = "0.3.30"
# A library to generate and parse UUIDs.
uuid = { version = "1.7.0", features = ["serde", "v4", "v5"] }
# A generic serialization/deserialization framework
serde = { version = "1.0.197", features = ["derive"] }
# Date and time library for Rust
chrono = { version = "0.4.34", features = ["serde"] }
# A JSON serialization file format
serde_json = "1.0.114"
# A crate for uploading files to Google cloud storage, and for generating download urls.
cloud-storage = { version = "0.11.1", default-features = false, features = ["rustls-tls"] }
# A library for managing a temporary directory and deleting all contents when it's dropped.
tempdir = "0.3.7"
# Type erasure for async trait methods
async-trait = "0.1.77"
# Types and traits for working with bytes
bytes = "1.5.0"
# Random number generators and other randomness functionality.
rand = "0.8.5"
# the BLAKE3 hash function
blake3 = "1.5.0"
# Recursively walk a directory.
walkdir = "2.5.0"
# URL library for Rust, based on the WHATWG URL Standard
url = "2.5.0"
# Application-level tracing for Rust.
tracing = "0.1.40"
# Utilities for enriching errors with `tracing`.
tracing-error = "0.2.0"
#  A library to acquire a stack trace (backtrace) at runtime in a Rust program. Should be removed after Rust 1.65.
backtrace = "0.3.69"
# generate typescript bindings from rust types
ts-rs = { git = "https://github.com/Heliozoa/ts-rs", rev = "94bf3c040ece6627b69f0d7095c0a5e2984adc86", features = [
  "chrono-impl",
  "serde-compat",
  "serde-json-impl",
  "uuid-impl",
], optional = true }
# An implementation of regular expressions for Rust.
regex = "1.10.3"
# Single assignment cells and lazy values.
once_cell = "1.19.0"
# An LCS based slice and string diffing implementation.
diff = "0.1.13"
# This library provides a convenient derive macro for the standard library's std::error::Error trait.
thiserror = "1.0.57"
# Percent encoding and decoding
percent-encoding = "2.3.1"
# Provides types and useful methods for working with IPv4 and IPv6 network addresses.
ipnet = "2.9.0"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.80"
# DEFLATE compression and decompression exposed as Read/BufRead/Write streams.
flate2 = "1.0.28"
# higher level HTTP client library
reqwest = { version = "0.12.4", features = ["brotli", "gzip", "json", "http2", "rustls-tls", "stream"] }
# Redis driver for Rust.
redis = { version = "0.24.0", features = ["aio", "tokio-comp"] }

[dev-dependencies]
# Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs.
pretty_assertions = "1.4.0"
tracing-subscriber = "0.3.18"

[features]
ts_rs = ["ts-rs"]
