[package]
name = "headless-lms-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To add a new dependency, search for it using `cargo search` and take the latest version of the package
# and the comment from there.
[dependencies]
headless-lms-base = { path = "../base" }
# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio.workspace = true
# Additional utilities for working with Tokio.
tokio-util = { version = "0.7.18", features = ["io"] }
# Utilities to work with `Stream` and `tokio`.
tokio-stream.workspace = true
# An implementation of future and streams featuring zero allocations, composability, and itera…
futures = "0.3.32"
# A library to generate and parse UUIDs.
uuid = { version = "1.23.4", features = ["serde", "v4", "v5"] }
# A generic serialization/deserialization framework
serde = { version = "1.0.228", features = ["derive"] }
# Date and time library for Rust
chrono = { version = "0.4.45", features = ["serde"] }
# A JSON serialization file format
serde_json = "1.0.150"
# Rust client library for Google Cloud Storage.
google-cloud-storage = "1.15.0"
# Authentication and signing helpers for Google Cloud Rust client libraries.
google-cloud-auth = "1.13.0"
# A library for managing temporary files and directories.
tempfile = "3.27.0"
# Type erasure for async trait methods
async-trait = "0.1.89"
# Asynchronous streams using async & await notation
async-stream = "0.3.6"
# Types and traits for working with bytes
bytes = "1.12.0"
# Random number generators and other randomness functionality.
rand = "0.10.2"
# the BLAKE3 hash function
blake3 = "1.8.5"
# Recursively walk a directory.
walkdir = "2.5.0"
# URL library for Rust, based on the WHATWG URL Standard
url = "2.5.8"
# Application-level tracing for Rust.
tracing = "0.1.44"
# Utilities for enriching errors with `tracing`.
tracing-error = "0.2.1"
#  A library to acquire a stack trace (backtrace) at runtime in a Rust program. Should be removed after Rust 1.65.
backtrace = "0.3.76"
# generate typescript bindings from rust types
ts-rs = { git = "https://github.com/Heliozoa/ts-rs", rev = "94bf3c040ece6627b69f0d7095c0a5e2984adc86", features = [
  "chrono-impl",
  "serde-compat",
  "serde-json-impl",
  "uuid-impl",
], optional = true }
# An implementation of regular expressions for Rust.
regex = "1.12.4"
# Single assignment cells and lazy values.
once_cell = "1.21.4"
# An LCS based slice and string diffing implementation.
diff = "0.1.13"
# This library provides a convenient derive macro for the standard library's std::error::Error trait.
thiserror = "2.0.18"
# Percent encoding and decoding
percent-encoding = "2.3.2"
# Provides types and useful methods for working with IPv4 and IPv6 network addresses.
ipnet = "2.12.0"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.103"
# DEFLATE compression and decompression exposed as Read/BufRead/Write streams.
flate2 = "1.1.9"
# higher level HTTP client library
reqwest = { version = "0.13.4", features = [
  "brotli",
  "gzip",
  "json",
  "http2",
  "rustls",
  "stream",
] }
# Redis driver for Rust.
redis = { version = "1.3.0", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
# Secret value wrapper to avoid leaking secrets in logs and memory
secrecy.workspace = true
# Code-first OpenAPI schema generation for shared utility structs used in request/response models.
utoipa.workspace = true

[dev-dependencies]
# Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs.
pretty_assertions = "1.4.1"
# Utilities for implementing and composing `tracing` subscribers.
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "allow"
